--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
