feat(blog): dodano 6 wpisów SEO dla drukarek kart Zebra
- Kody błędów drukarek kart ZC300/ZXP
- Drukarka Zebra zacina karty
- Białe linie na karcie - wymiana głowicy
- Błędy kodowania paska magnetycznego (mag stripe)
- CardStudio - tutorial projektowania kart
- Porównanie drukarek ZC100 vs ZC300 vs ZXP

Dodano podkategorie dla drukarek: etykiet, kart, opasek, mobilne
Dodano zdjęcia do wpisów

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/sync-tracking",
       "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/cron/chat-report",
+      "schedule": "0 19 * * *"
     }
   ]
 }
