--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.66.0",
     "react-intersection-observer": "^10.0.0",
+    "react-joyride": "^2.9.3",
     "resend": "^6.4.2",
     "sonner": "^2.0.7",
     "stripe": "^19.3.1",
