--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.312.0",
     "next": "14.2.5",
+    "openai": "^6.13.0",
     "pdf-parse": "^2.4.5",
     "pdfmake": "^0.2.20",
     "react": "^18",
