--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/chat-report",
       "schedule": "0 19 * * *"
+    },
+    {
+      "path": "/api/cron/check-repair-deliveries",
+      "schedule": "*/30 * * * *"
     }
   ]
 }
