--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@react-pdf/renderer": "^4.3.1",
+    "@react-pdf/renderer": "^4.3.2",
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.4.0",
     "@supabase/ssr": "^0.5.2",
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.18.2",
+    "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.312.0",
@@ -38,6 +39,8 @@
     "react-hook-form": "^7.66.0",
     "react-intersection-observer": "^10.0.0",
     "react-joyride": "^2.9.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^6.4.2",
     "sonner": "^2.0.7",
     "stripe": "^19.3.1",
