Sklep: nowa strona zamówienia, poprawki UI koszyka, korekty PN dla GK/GX420
- Dodano /sklep/zamowienie - formularz składania zamówień online
- Dodano API /api/orders do obsługi zamówień
- Dodano funkcje email: sendOrderConfirmationEmail, sendNewOrderNotificationEmail
- Koszyk: przycisk 'Przejdź do zamówienia' zamiast telefonu
- Koszyk: cena netto w jednej linii
- Koszyk: usunięto ikonę torby z nagłówka
- Placeholdery produktów: większe zdjęcia, info o dostępności
- Produkty 'na zamówienie' można teraz dodać do koszyka (wysyłka 5-7 dni)
- Poprawiono format cen na 583,00 zł (z przecinkiem)
- Zmieniono PN dla GK420d/GX420d: G105910-148 -> 105934-037
- Połączono GK420t i GX420t w jeden produkt (PN: 105934-038)

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "path": "/api/cron/check-repair-deliveries",
       "schedule": "*/30 * * * *"
+    },
+    {
+      "path": "/api/cron/sync-ingram",
+      "schedule": "0 */6 * * *"
     }
   ]
 }
