--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.312.0",
     "next": "14.2.5",
     "openai": "^6.15.0",
