Automatyczne prośby o opinię Google 2 dni po wysyłce
- CRON job /api/cron/request-review (codziennie o 10:00)
- Email z prośbą o opinię: header jak w innych mailach, formalny ton
- Link do Google Reviews: https://g.page/r/CWWwiewE2ri8EAE/review
- Kolumny: review_request_sent, review_request_sent_at
- Podgląd emaila: /preview-review-email.html

--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
     {
       "path": "/api/cron/sync-ingram",
       "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/cron/request-review",
+      "schedule": "0 10 * * *"
     }
   ]
 }
